# 433ctrl

./: 433cmd  433srv  433srv.sh  carpo.boot  carpo.shutdown  carpo.state  comp.boot  comp.shutdown  comp.state  devices.json
controller/arduino/sketch/: 433ctrl.ino
controller/rpi/: CMakeLists.txt  main.cpp
init.d/: 433ctrl  ctrl433
scripts/: comp
